@@ -27,7 +27,6 @@ import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -287,7 +286,7 @@ public class GenerateXsd {
                     }
                     try {
                         Charset charset = StandardCharsets.UTF_8;
-                        Path path = Paths.get(nodesfileName);
+                        Path path = Path.of(nodesfileName);
                         nodesBW = Files.newBufferedWriter(path, charset);
                         nodesBW.write(nodesContent);
                     } catch (IOException e) {
@@ -309,7 +308,7 @@ public class GenerateXsd {
                 BufferedWriter bw = null;
                 try {
                     Charset charset = StandardCharsets.UTF_8;
-                    Path path = Paths.get(outfileName);
+                    Path path = Path.of(outfileName);
                     bw = Files.newBufferedWriter(path, charset);
                     bw.write(fileContent);
                 } catch (IOException e) {
